--- a/index.html
+++ b/index.html
@@ -4,5 +4,19 @@
   </head>
   <body>
   	<h1>Hello World!</h1>
+  	<ol>
+  	  <li>First Item</li>
+  	  <li>Second Item</li>
+  	</ol>
+  	<ul>
+  	  <li>First Item</li>
+  	  <li>Second Item</li>	
+  	</ul>
+  	<p>Some say the blacker the berry, the sweeter the juice I say the darker the flesh then the deeper the roots I give a holla to my sisters on welfare 2Pac cares, if don't nobody else care And, I know they like to beat you down a lot When you come around the block, brothers clown a lot But please don't cry, dry your eyes, never let up Forgive but don't forget, girl, keep your head up And when he tells you you ain't nothin', don't believe him And if he can't learn to love you, you should leave him Cause sister, you don't need him And I ain't tryin' to gas ya up, I just call 'em how I see 'em You know what makes me unhappy When brothers make babies, and leave a young mother to be a pappy And since we all came from a woman Got our name from a woman and our game from a woman I wonder why we take from our women Why we rape our women, do we hate our women I think it's time to kill for our women Time to heal our women, be real to our women And if we don't we'll have a race of babies That will hate the ladies that make the babies And since a man can't make one He has no right to tell a woman when and where to create one So will the real men get up I know you're fed up ladies, but keep your head up
+  	</p>
+  	<img src="http://placekitten.com/g/200/300">
+
+  	<!-- COMMENT: This will not appear. This will appear Inspect Element-->
+  	<!-- COMMENT: Ctrl + / will allow you to COMMENT -->
   </body>
 </html>
