--- a/AdQuadrant US Open Mil Maker Email.html
+++ b/AdQuadrant US Open Mil Maker Email.html
@@ -362,7 +362,7 @@
                             <div>
                               <p align="center" style="font-family: 'Oswald',Helvetica, Arial, sans-serif; font-size: 30px; font-weight: 700; line-height: 30px; margin-bottom:5; padding-top:15px; color: #Fff;">Win $1 MIllion<BR>
                                 <br> 
-                             <span style="font-family: 'Open Sans',Helvetica, Arial, sans-serif; font-size: 30px; font-weight: bold; line-height: 30px; margin-bottom:5; color: #ff6c00;"><a href="http://partners.draftkings.com/aff_c?offer_id=1613&aff_id=349181" alias="HEADLINE TEXT" style="text-decoration: none; color: #ff6c00;">  Fantasy Golf Pool</a></span><BR>
+                             <span style="font-family: 'Open Sans',Helvetica, Arial, sans-serif; font-size: 30px; font-weight: bold; line-height: 30px; margin-bottom:5; color: #ff6c00;"><a href="http://partners.draftkings.com/aff_c?offer_id=1613&aff_id=349181" alias="HEADLINE TEXT" style="text-decoration: none; color: #ff6c00;">  Fantasy Golf Pool</a></span><BR><BR>
                              <span style="font-family:'Open Sans', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: bold; line-height: 25px; margin-bottom:5; color: #ffffff;">$2,500,000 purse!<BR>
                                   <span style="color: #fff;">Only $20 to play</span><BR>
                                   <BR>
