--- a/AdQuadrant US Open Mil Maker Email.html
+++ b/AdQuadrant US Open Mil Maker Email.html
@@ -405,7 +405,7 @@
                      <table width="100%" border="0" cellpadding="5" cellspacing="0" style="width: 100%; background-color:#ffffff;" align="center">
                         <tr>
                                 	<td width="1">&nbsp;</td>
-                                    <td colspan="2" style="font-family: 'Open Sans',Helvetica, Arial, sans-serif; font-size: 14px; line-height: 22px; color: #000000; padding-bottom: 10px; text-align:left"><p>Turn $20 into $1 Million! Just follow these 3 easy steps:<BR>
+                                    <td colspan="2" style="font-family: 'Open Sans',Helvetica, Arial, sans-serif; font-size: 14px; line-height: 22px; color: #000000; padding-bottom: 10px; text-align:left"><p>You don't need to know golf to turn $20 into $1 Million this week! Just follow these 3 easy steps:<BR>
                                       <br>
                                       <font size="4"><b>How to win:</b></font></p>
                                       <table cellspacing="0" width="100%" class="content-table" border="0" style="border-width:0px;border-style:none;border-color:#ffffff;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;border-collapse:collapse !important;mso-table-lspace:0pt;mso-table-rspace:0pt; font-family: 'Open Sans',Helvetica, Arial, sans-serif; font-size: 14px; color: #000000;">
