--- a/DeFranco Internal Email.html
+++ b/DeFranco Internal Email.html
@@ -422,7 +422,7 @@
                                <tr>
                                 <td width="3%" style="text-align:left; vertical-align:text-top">
                                         2.</td>
-                                    <td  width="97%" style="text-align:left; vertical-align:text-top; padding-bottom:3px;">Follow your team as you move up the leaderboard!</td>
+                                    <td  width="97%" style="text-align:left; vertical-align:text-top; padding-bottom:3px;">Follow your team all weekend as you and Phil move up the leaderboard!</td>
                                </tr>
                                <tr>
                                 <td width="3%" style="text-align:left; vertical-align:text-top">
