--- a/DeFranco Internal Email.html
+++ b/DeFranco Internal Email.html
@@ -362,7 +362,7 @@
                             <div>
                               <p align="center" style="font-family: 'Oswald',Helvetica, Arial, sans-serif; font-size: 30px; font-weight: 700; line-height: 30px; margin-bottom:5; padding-top:15px; color: #Fff;">Fans of the Philip DeFranco Show!<BR>
                                 <br>
-                                <span style="font-family: 'Open Sans', Helvetica, Arial, sans-serif; font-size: 30px; color: #ff6c00">Get a Shout Out From Phil</span><BR>
+                                <span style="font-family: 'Open Sans', Helvetica, Arial, sans-serif; font-size: 30px; color: #ff6c00">Get a Shout Out From Phil</span><BR><BR>
                              <span style="font-family:'Open Sans', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: bold; line-height: 25px; margin-bottom:5; color: #ffffff;">And play for the $1,000,000 first place prize!                                  
                                   <BR>
                                   <span style="color: #fff;">Only $20 to play</span><BR>
